# iobuf

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  Makefile  README.md  flake.nix  shell.nix
.github/workflows/: c-cpp.yml  ci.yml
cmake/: install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
example/: CMakeLists.txt
include/: iobuf.h
include/iobuf/: iobuf.h
source/: iobuf.c
src/: iobuf.c  main.c
test/: CMakeLists.txt  test-big.c  test-eval-libc.c  test-evalcall.c  test-rand.c  test-rw.c  test-simple-format.c
test/source/: test-format.c  test-rand.c
test_files/: test_file2.txt
